--- a/pc2-sop.html
+++ b/pc2-sop.html
@@ -36,7 +36,7 @@
 <a name="前置設定"></a>
 # 前置設定
 
-如果不想了解詳細的狀況可以看這邊就好。先分成 server 跟 client 端。
+先分成 server 跟 client 端。
 
 - *先設定 server 端*
 - 解壓縮下載後的檔案 (以 pc2-9.3.0-3388.zip 為例)，會出現資料夾 (pc2-9.3.0)，暫且稱這個資料夾位置為 `/`
