Fix encoding utf8 error in scoreboard

--- a/pc2-sop.html
+++ b/pc2-sop.html
@@ -128,6 +128,9 @@ server=192.168.34.136:50002
 	- 要修改內容請至 `/data/xsl/` 裡直接修改模板，因為這裡面的檔案室自動生成的
 - 有 Apache
 	- 小弟我還不清楚
+- 關於 scoreboard 在 display name 為中文時，會出現亂碼的問題：
+	- 編輯 pc2board
+	- 在執行 java 的參數補上 `-Dfile.encoding=utf8`
 
 <a name="比賽中"></a>
 # 比賽中
