small page "Get Screen Size".

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>snakeneedy.github.io</h1>
-<p><a href="https://github.com/snakeneedy">My Github</a></p>
+<ul>
+<li><a href="https://github.com/snakeneedy">My Github</a></li>
+<li>pc^2 SOP: <a href="http://snakeneedy.github.io/pc2-sop.html">http://snakeneedy.github.io/pc2-sop.html</a></li>
+<li>Get Screen Size: <a href="http://snakeneedy.github.io/get-screen-size.html">http://snakeneedy.github.io/get-screen-size.html</a></li>
+</ul>
 </body>
 </html>
