--- a/get-screen-size.html
+++ b/get-screen-size.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf8" />
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=1;" />
 <title>Get Screen Size - snakeneedy.github.io</title>
 <style>
 body {
