Update get-screen-size.html: format of face

--- a/get-screen-size.html
+++ b/get-screen-size.html
@@ -16,8 +16,8 @@ div {
 <body>
 <div>
 	<h1>Get Screen Size - snakeneedy.github.io</h1>
-	<h2>Window (Width, Height) = ( <span id="wW"></span> x <span id="wH"></span> )</h2>
-	<h2>Screen (Width, Height) = ( <span id="sW"></span> x <span id="sH"></span> )</h2>
+	<h2>Window (Width, Height)<br />( <span id="wW"></span> x <span id="wH"></span> )</h2>
+	<h2>Screen (Width, Height)<br />( <span id="sW"></span> x <span id="sH"></span> )</h2>
 	<p>JavaScript is needed.</p>
 </div>
 <script>
