Updat pc2-sop.html ...
pc2server should be hosted in a computer without running other programs.

--- a/pc2-sop.html
+++ b/pc2-sop.html
@@ -91,6 +91,7 @@ server=192.168.34.136:50002
 
 + 用 Generate 可以快速產生想要的 team, judge, scoreboard 數量
 + 基本上是 1 個 scoreboard、至少等同於題數的 judge、和大於參賽隊伍的 team (多幾個來做測試)
+	* 要注意：開 pc2server 的電腦最好不要開其他東西(包含 pc2judge 和 pc2admin)，以免意外當機的時候延宕整個比賽。
 + 只能修改，沒辦法刪除 (小弟我不會刪)
 
 ### ▌ 設定 **Problems**
