Link "current-time.html" to README.md and index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <li>pc^2 SOP: <a href="http://snakeneedy.github.io/pc2-sop.html">http://snakeneedy.github.io/pc2-sop.html</a></li>
 <li>Get Screen Size: <a href="http://snakeneedy.github.io/get-screen-size.html">http://snakeneedy.github.io/get-screen-size.html</a></li>
 <li>Tools: <a href="http://snakeneedy.github.io/tools.html">http://snakeneedy.github.io/tools.html</a></li>
+<li>Current Time: <a href="http://snakeneedy.github.io/current-time.html">http://snakeneedy.github.io/current-time.html</a></li>
 </ul>
 </body>
 </html>
