Add another rendering source in tools.html

--- a/tools.html
+++ b/tools.html
@@ -19,8 +19,11 @@ pre {
     <ul>
       <li>
         HTML for LaTex:
-        <pre>&lt;img src="https://latex.codecogs.com/svg.latex?<span class="uriComponentEncoded"></span>" title="<span class="url"></span>" alt="<span class="url"></span>" /&gt;</pre>
       </li>
+      <ul>
+        <li><pre>&lt;img src="https://latex.codecogs.com/svg.latex?<span class="uriComponentEncoded"></span>" title="<span class="url"></span>" alt="<span class="url"></span>" /&gt;</pre></li>
+        <li><pre>&lt;img src="https://render.githubusercontent.com/render/math?math=<span class="uriComponentEncoded"></span>" title="<span class="url"></span>" alt="<span class="url"></span>" /&gt;</pre></li>
+      </ul>
       <li>
         HTML for LaTex with link:
         <pre>&lt;a href="https://www.codecogs.com/eqnedit.php?latex=<span class="uriComponentEncoded"></span>" target="_blank"&gt;
@@ -29,8 +32,11 @@ pre {
       </li>
       <li>
         Markdown for LaTex:
-        <pre>![<span class="url"></span>](https://latex.codecogs.com/svg.latex?<span class="uriComponentEncoded"></span> "<span class="url"></span>")</pre>
       </li>
+      <ul>
+        <li><pre>![<span class="url"></span>](https://latex.codecogs.com/svg.latex?<span class="uriComponentEncoded"></span> "<span class="url"></span>")</pre></li>
+        <li><pre>![<span class="url"></span>](https://render.githubusercontent.com/render/math?math=<span class="uriComponentEncoded"></span> "<span class="url"></span>")</pre></li>
+      </ul>
       <li>
         encodeURI:
         <pre class="uriEncoded"></pre>
@@ -48,7 +54,11 @@ pre {
         <pre class="uriComponentDecoded"></pre>
       </li>
     </ul>
-    <p>Ref. <a href="https://www.codecogs.com/latex/eqneditor.php">https://www.codecogs.com/latex/eqneditor.php</a></p>
+    <p>Reference:</p>
+    <ul>
+      <li><a href="https://www.codecogs.com/latex/eqneditor.php">https://www.codecogs.com/latex/eqneditor.php</a></li>
+      <li><a href="https://gist.github.com/a-rodin/fef3f543412d6e1ec5b6cf55bf197d7b">https://gist.github.com/a-rodin/fef3f543412d6e1ec5b6cf55bf197d7b</a></li>
+    </ul>
   </div>
 </body>
 <script type="text/javascript">
